Fix overflow issue

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -20,4 +20,5 @@ a {
 
 p {
   overflow-x: auto;
+  overflow-y: hidden;
 }
